--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,18 @@ a {
 #main {
   background-image: linear-gradient(130deg, #1b1b32, #e83b5877); }
 
+@keyframes movimiento {
+  from {
+    transform: translate(300px); }
+  to {
+    transform: translate(0); } }
+
+@keyframes movimiento2 {
+  from {
+    transform: translate(-300px); }
+  to {
+    transform: translate(0); } }
+
 header {
   display: flex;
   justify-content: space-around;
@@ -39,7 +51,10 @@ header {
   text-align: left;
   height: 100vh; }
   #welcome-section .title {
-    width: 80%; }
+    width: 80%;
+    animation-name: movimiento2;
+    animation-iteration-count: initial;
+    animation-duration: 3s; }
     #welcome-section .title h1 {
       font-size: 1.5rem;
       color: #fff;
@@ -97,6 +112,8 @@ header {
       .projects-section .projects-grid .project .projects-title {
         font-size: 1.5rem;
         padding: 1.5rem 0.5rem; }
+        .projects-section .projects-grid .project .projects-title .destacado {
+          color: #f773b9; }
   .projects-section .btn {
     font-size: 1.5rem;
     background-image: linear-gradient(130deg, #1b1b32, #e83b5877);
