--- a/scss/layout/_bienvenida.scss
+++ b/scss/layout/_bienvenida.scss
@@ -6,6 +6,9 @@
     height: 100vh;
     .title{
         width: 80%;
+        animation-name: movimiento2;
+        animation-iteration-count: initial;
+        animation-duration: 3s;
         h1{
             font-size: 1.5rem;
             color: #fff;
