--- a/scss/layout/_projectos.scss
+++ b/scss/layout/_projectos.scss
@@ -30,6 +30,9 @@
             .projects-title{
                 font-size: 1.5rem;
                 padding: 1.5rem 0.5rem;
+                .destacado{
+                    color: $color-secundario;
+                }
             }
         }
     }
