--- a/scss/layout/_projectos.scss
+++ b/scss/layout/_projectos.scss
@@ -8,6 +8,7 @@
         font-weight: 500;
         max-width: 640px;
         margin: 0 auto 6rem auto;
+        padding-top: 10px;
     }
     .projects-grid{
         display: grid;
