--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,8 @@ header {
     font-size: 1.8rem;
     font-weight: 500;
     max-width: 640px;
-    margin: 0 auto 6rem auto; }
+    margin: 0 auto 6rem auto;
+    padding-top: 10px; }
   .projects-section .projects-grid {
     display: grid;
     grid-template-columns: 1fr;
@@ -133,7 +134,7 @@ header {
   background-color: rgba(27, 27, 50, 0.644);
   border-radius: 5px; }
   .contact-section .capa .contact-section-header h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: #fff;
     font-weight: 600; }
   .contact-section .capa .contact-section-header p {
@@ -168,11 +169,31 @@ footer {
       width: 60%;
       padding: 10px; }
       #welcome-section .title h1 {
-        font-size: 1.9rem; }
+        font-size: 1.8rem; }
       #welcome-section .title a {
-        font-size: 1.2rem; }
+        font-size: 1.3rem; }
+    #welcome-section .imagen {
+      margin-top: 1.2rem; }
   .projects-section .projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); }
     .projects-section .projects-grid .project .project-img {
       height: 300px; } }
+
+@media only screen and (min-width: 873px) {
+  #welcome-section .title h1 {
+    font-size: 2.2rem; }
+  .projects-section h2 {
+    font-size: 2.5rem; } }
+
+@media only screen and (min-width: 1080px) {
+  #welcome-section .title h1 {
+    font-size: 3rem; }
+  .projects-section h2 {
+    font-size: 2.5rem; }
+  .contact-section .capa .contact-section-header h2 {
+    font-size: 3rem; } }
+
+@media only screen and (min-width: 1200px) {
+  #welcome-section .title {
+    width: 45%; } }
