--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,6 +4,9 @@ header{
     align-items: center;
     height: 5rem;
     background-color: $color-principal;
+    position: sticky;
+    top: 0;
+    z-index: 10000;
     .logo{
         color: #fff;
         font-size: 1.5rem;
